# stree

./: LICENSE  README.md  pyproject.toml
stree/: cli.py  config.py  indexer.py  printer.py  search.py
